--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ jobs:
     - cachix use studio
     - nix-build -j2 -A studio-env . | (if test -n "$CACHIX_SIGNING_KEY"; then cachix push studio; else cat; fi)
     name: "Docker"
+    script:
     - docker build -t studioproject/$TRAVIS_BRANCH .
     - docker run -t studioproject/$TRAVIS_BRANCH test
     - if [[ $TRAVIS_PULL_REQUEST == "false" ]]; then echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin; docker push studioproject/$TRAVIS_BRANCH; fi
